--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,10 @@ allprojects {
     apply plugin: 'com.github.johnrengelman.shadow'
 
     group = 'org.mythicprojects.commons'
-    version = '0.0.2-SNAPSHOT'
+    version = '0.0.3-SNAPSHOT'
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
 
     compileJava.options.encoding = 'UTF-8'
 }
@@ -25,9 +25,8 @@ subprojects {
         maven { url "https://repo.mythicprojects.org/releases" }
         maven { url "https://repo.mythicprojects.org/snapshots" }
 
-        // Spigot
-        maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        // Paper
+        maven { url "https://repo.papermc.io/repository/maven-public" }
     }
 
     dependencies {
