--- a/minecraft/bukkit/build.gradle
+++ b/minecraft/bukkit/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation project(":general")
-    compileOnly minecraft.bukkit
+    compileOnly minecraft.paper
 }
 
 shadowJar {
