--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,10 @@
 plugins {
     id 'idea'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 allprojects {
     apply plugin: 'java-library'
     apply plugin: 'maven-publish'
-    apply plugin: 'com.github.johnrengelman.shadow'
 
     group = 'org.mythicprojects.commons'
     version = '0.17.0-SNAPSHOT'
@@ -29,11 +27,6 @@ subprojects {
         maven { url "https://repo.papermc.io/repository/maven-public" }
     }
 
-    shadowJar {
-        dependsOn(jar)
-        archiveClassifier = ''
-    }
-
     java {
         withSourcesJar()
         withJavadocJar()
@@ -45,24 +38,11 @@ subprojects {
         options.addStringOption('charSet', 'UTF-8')
     }
 
-    afterEvaluate {
-        def shadowJarTask = project.tasks.shadowJar
-        project.configurations
-                .collectMany { it.allDependencies }
-                .findAll { it instanceof ProjectDependency }
-                .unique()
-                .forEach {
-                    shadowJarTask.dependsOn(it.dependencyProject.tasks.shadowJar)
-                }
-    }
-
     publishing {
         publications {
             libraries(MavenPublication) {
-                from project.shadow.component(it)
-                artifact sourcesJar
-                artifact javadocJar
                 artifactId = project.name.toLowerCase()
+                from components.java
 
                 pom {
                     url = "https://github.com/Mythic-Projects/MythicCommons"
@@ -94,7 +74,6 @@ subprojects {
 
                 // Add external repositories to published artifacts
                 // ~ btw: pls don't touch this
-                // Original code: https://github.com/FunnyGuilds/FunnyGuilds/blob/master/build.gradle
                 pom.withXml {
                     def repositories = asNode().appendNode('repositories')
 
@@ -111,8 +90,8 @@ subprojects {
 
         repositories {
             maven {
-                name "titanvale-repo"
-                url "https://repo.titanvale.net/${version.toString().endsWith('SNAPSHOT') ? 'snapshots' : 'releases'}"
+                name "mythicprojects-repo"
+                url "https://repo.mythicprojects.org/${version.toString().endsWith('SNAPSHOT') ? 'snapshots' : 'releases'}"
 
                 credentials {
                     username = System.getenv("MAVEN_NAME")
