--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ allprojects {
     apply plugin: 'maven-publish'
 
     group = 'org.mythicprojects.commons'
-    version = '0.22.0-SNAPSHOT'
+    version = '0.23.0-SNAPSHOT'
 
     java {
         sourceCompatibility = JavaVersion.VERSION_21
@@ -92,12 +92,12 @@ subprojects {
 
         repositories {
             maven {
-                name = "mythicprojects-repo"
+                name = "mythicprojects"
                 url = "https://repo.mythicprojects.org/${version.toString().endsWith('SNAPSHOT') ? 'snapshots' : 'releases'}"
 
-                credentials {
-                    username = System.getenv("MAVEN_NAME")
-                    password = System.getenv("MAVEN_TOKEN")
+                credentials(PasswordCredentials)
+                authentication {
+                    basic(BasicAuthentication)
                 }
             }
         }
